[package]
name = "grapheme"
version = "0.1.0"
authors = ["Apoorva Joshi <apoorvaj@apoorvaj.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.20.0"
ash = "0.29.0"
image = "0.22"
glam = "0.8.6"
gltf = "0.15"
memoffset = "0.5.1" #TODO: Consider removing dependency

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.5", features = ["windef", "libloaderapi"] }